--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="image-container">
 			<img src="logo.png" width="400">
 		</div>
-	
+	</div>
 		<div class="overlay-text">
 			<h1>Happening now</h1>
 			<h3>Join today.</h3>
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	
 	
 	<div class="footer">
 		<p>
@@ -66,6 +66,10 @@
 		<p>
 			&nbsp; &nbsp;
 		</p>
+	</div>
+	<div class="designed-By">
+		<p> This is a cloned X (twitter ) page. All code written in: HTML & CSS by @lamehdah</p>
+
 	</div>
 </body>
 </html>
